--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "apexcharts": "^5.3.5",
     "axios": "^1.12.2",
@@ -22,7 +26,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.2.0",
-    "sweetalert2": "^11.23.0"
+    "sweetalert2": "^11.23.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
